Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-101750

cleanup() or compact() may fail with a NamespaceNotFound if they are executed immediately after the FLE collection is created

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-03-17
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      The cleanup() and compact() functions first checks the collection options using listCollections. If this listCollections command is sent to a secondary node, that node may not have replicated the collection yet and will return a NamespaceNotFound error.

      This failure occurs when shards are database metadata authoritative because listCollections on a secondary node does not require a refresh of the DSS to satisfy the dbVersion and is executed before the collection creation is replicated. Without authoritative database metadata on shards, the secondary node will acknowledge the collection while still waiting for the refresh.

            Assignee:
            pol.pinol@mongodb.com Pol Pinol
            Reporter:
            pol.pinol@mongodb.com Pol Pinol
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: