SERVER-101750 cleanup() or compact() may fail with a NamespaceNotFound if they are executed immediately after the FLE collection is created (#33324)

GitOrigin-RevId: b818f6ef9f9024addb54dbaa1d8a37346e3c4f89