src/mongo/db/modules/enterprise/jstests/fle2/cleanup_collection.js
@@ -62,7 +62,7 @@ runEncryptedTest(db, dbName, collName, sampleEncryptedFields, (edb, client) => {
 jsTestLog("Test cleanup on unencrypted collection fails");
 runEncryptedTest(db, dbName, collName, sampleEncryptedFields, (edb, client) => {
     assert.commandWorked(edb.createCollection("unencrypted"));
-    assert.soonNoExcept(() => assert.commandFailedWithCode(edb.unencrypted.cleanup(), 6346807));
+    assert.commandFailedWithCode(edb.unencrypted.cleanup(), 6346807);
 });
 
 jsTestLog("Test cleanup on empty encrypted collection");
